crates/nestweaver-resolver/src/snapshots/nestweaver_resolver__resolve__tests__snapshot_tests__snapshot_cross_file_resolution.snap
---
source: crates/nestweaver-resolver/src/resolve.rs
assertion_line: 2903
expression: "sorted_edges(files, Language::JavaScript)"
---
- source_uid: "sym:repo:test:snapshot:27653c212e1c:0d6e4079e367:5"
  target_uid: "sym:repo:test:snapshot:85b18f65b01c:39e84ff3a0b6:1"
  edge_type: Imports
  confidence: 0.9
  link_type: ~
  evidence:
    - kind: import_alias
      weight: 0.9
      note: helperFn -> helperFn
- source_uid: "sym:repo:test:snapshot:27653c212e1c:0d6e4079e367:5"
  target_uid: "sym:repo:test:snapshot:85b18f65b01c:39e84ff3a0b6:1"
  edge_type: Calls
  confidence: 0.9
  link_type: ~
  evidence:
    - kind: import_alias
      weight: 0.9
      note: helperFn -> helperFn
