crates/nestweaver-resolver/src/snapshots/nestweaver_resolver__resolve__tests__snapshot_tests__snapshot_inheritance_resolution.snap
---
source: crates/nestweaver-resolver/src/resolve.rs
expression: "sorted_edges(files, Language::JavaScript)"
---
- source_uid: "sym:repo:test:snapshot:a19725de73a8:d0dd4cf0ac87:20"
  target_uid: "sym:repo:test:snapshot:a19725de73a8:dbb7e4f52476:1"
  edge_type: Extends
  confidence: 0.95
  link_type: ~
  evidence:
    - kind: same_file
      weight: 0.95
