crates/nestweaver-resolver/src/snapshots/nestweaver_resolver__resolve__tests__snapshot_tests__snapshot_same_file_resolution.snap
---
source: crates/nestweaver-resolver/src/resolve.rs
expression: "sorted_edges(files, Language::JavaScript)"
---
- source_uid: "sym:repo:test:snapshot:27653c212e1c:61de55ba3388:10"
  target_uid: "sym:repo:test:snapshot:27653c212e1c:6fd8973412ca:20"
  edge_type: Calls
  confidence: 0.95
  link_type: ~
  evidence:
    - kind: same_file
      weight: 0.95
- source_uid: "sym:repo:test:snapshot:27653c212e1c:61de55ba3388:10"
  target_uid: "sym:repo:test:snapshot:27653c212e1c:e81d3b0e9d82:1"
  edge_type: Calls
  confidence: 0.95
  link_type: ~
  evidence:
    - kind: same_file
      weight: 0.95
